      the rug in \code{intensityplot()} were computed from the whole set
      of event times.
    }

    \item The \code{as.epidata.data.frame()} converter did not actually
    allow for latent periods (via \code{tE.col}). This is now possible
    but considered experimental (methods for \code{"epidata"} currently
    ignore latent periods).
  }
}

}
  

\section{Changes in surveillance version 1.15.0 (2017-10-06)}{

\subsection{NEW FEATURES}{
  \itemize{
    \item \code{siaf.gaussian()} now also employs a \code{polyCub.iso()}
    integration routine by default (similar to the powerlaw-type
    kernels), instead of adaptive midpoint cubature.
    This increases precision and considerably accelerates estimation of
    \code{twinstim()} models with a Gaussian spatial interaction
    function. Models fitted with the new default
    (\code{F.adaptive=FALSE, F.method="iso"})
    will likely differ from previous fits (\code{F.adaptive=TRUE}),
    and the numerical difference depends on 
    the adaptive bandwidth used before (the default \code{adapt=0.1}
    yielded a rather rough approximation of the integral).

    \item Added \code{quantile()}, \code{confint()}, and \code{plot()}
    methods for \code{"oneStepAhead"} predictions.

    \item Exported the function \code{simEndemicEvents()} to simulate a
    spatio-temporal point pattern from an endemic-only
    \code{"twinstim"}; faster than via the general
    \code{simulate.twinstim()} method.
  }
}
  
\subsection{MINOR CHANGES}{
  \itemize{
    \item \code{twinstim(..., siaf = siaf.gaussian())}
    uses a larger default initial value for the kernel's standard
    deviation (based on the size of the observation region).

    \item Non-default parametrizations of \code{siaf.gaussian()} are
    deprecated, i.e., always use \code{logsd=TRUE} and \code{density=FALSE}.

    \item \code{twinstim()} uses a smaller default initial value for the
    epidemic intercept, which usually allows for faster convergence.
